# cuda-gpu

./: README.md
Lab02/add-mm/: CMakeLists.txt  add_mm.cu  add_mm.h  add_mm_main.cc  testcase_generator.cc
Lab02/blur/: CMakeLists.txt  blur.cu  blur.h  blur_main.cc
Lab02/mult-mv/: CMakeLists.txt  mult_mv.cu  mult_mv.h  mult_mv_main.cc  testcase_generator.cc
Lab02/query/: query.out
Lab02/rgb2gray/: CMakeLists.txt  rgb2gray.cu
Lab02/rgb2gray/ref-data/: airplane_gray.ppm  dog_gray.ppm  mandrill_gray.ppm  peppers_gray.ppm  splash_gray.ppm
Lab02/utils/: image.cc  image.h  image_diff.cc  matrix.cc  matrix.h  ppmIO.h
lab1/: launch.json
